Added ruppes symbol in the layouts

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -22,7 +22,7 @@
         android:id="@+id/cost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="5,000.00"
+        android:text="₹5,000.00"
         android:layout_marginRight="15dp"
         android:textColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
