--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:id="@+id/totalExpensesAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="75,300.00"
+        android:text="₹75,300.00"
         android:textSize="18dp"
         android:textStyle="bold"
         android:textColor="@color/red"
