--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginLeft="15dp"
         android:text="Groceries"
+        android:textSize="18dp"
         app:layout_constraintEnd_toStartOf="@+id/cost"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -23,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="₹5,000.00"
+        android:textSize="18dp"
         android:layout_marginRight="15dp"
         android:textColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
