--- a/app/src/main/res/layout/expense_add.xml
+++ b/app/src/main/res/layout/expense_add.xml
@@ -39,10 +39,10 @@
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text=""
         android:layout_marginTop="10dp"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        android:text=""
         app:layout_constraintStart_toStartOf="@+id/price_label"
         app:layout_constraintTop_toBottomOf="@+id/price_label" />
 
