--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,23 +25,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/totalExpensesAmount" />
 
-    <ListView
-        android:id="@+id/expenses"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_margin="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/list_item" />
-
     <TextView
         android:id="@+id/totalExpensesAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:text="₹75,300.00"
+        android:layout_marginTop="10dp"
         android:textColor="@color/red"
         android:textSize="18dp"
         android:textStyle="bold"
@@ -58,5 +48,14 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/totalExpensesAmount"
         app:layout_constraintTop_toTopOf="@+id/totalExpensesAmount" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/expenses"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        tools:listitem="@layout/list_item"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
